<resources>
    <string name="app_name">PracticalTest02</string>
    <string name="server">SERVER</string>
    <string name="port">Port</string>
    <string name="start_server">Start server</string>
    <string name="stop_server">Stop server</string>
    <string name="client">CLIENT</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="required_information">Required information</string>
    <string name="make_request">Make request</string>

</resources>